changed button color to white, changed add button to color primary

--- a/src/_App.scss
+++ b/src/_App.scss
@@ -38,6 +38,14 @@ li {
   margin-top: 1rem;
 }
 
+li a {
+  color: $color-primary;
+  transition: all 0.2s;
+  &:hover {
+    color: #b592f8;
+  }
+}
+
 .repoName {
   text-decoration: none;
   color: black;
