--- a/src/_search.scss
+++ b/src/_search.scss
@@ -29,6 +29,7 @@
     padding: 1rem 0;
     transition: all 0.2s;
     border-radius: 0.5rem;
+    color: white;
     &:hover {
       color: white;
       cursor: pointer;
